[tool.poetry]
name = "rjwedding-backend"
version = "0.1.0"
description = ""
authors = ["burtonrj <burtonrossj@gmail.com>"]
readme = "README.md"
packages = [{include = "rjwedding_backend"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
